# hermes-screencast-agent

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  pyproject.toml
docs/: BROWSER_RUNTIME.md  hermes-agent-architecture.md  windows-existing-browser.md
legacy/: apply_zoom.py  record_saas.py
scripts/: demo_local_transport.py  demo_raw_chrome_cdp.py  get-existing-chrome.ps1  launch_companion_windows.py  run_heygen_windows_e2e.ps1  test_raw_chrome_cdp_windows.ps1
skill/: SKILL.md
src/hermes_screencast/: annotations.py  auth.py  auto_edit.py  auto_zoom.py  config.py  cursor.py  (+16 more)
templates/: public.json
tests/: integration_smoke_test.py  test_annotations.py  test_auth.py  test_auto_edit.py  test_auto_zoom.py  test_browser_demo_executor.py  test_browser_factory.py  test_browser_runtime.py  test_browser_session.py  test_companion_cli.py  test_cursor_motion.py  test_demo_discover_cli.py  test_demo_generate_cli.py  test_demo_json_loader.py  test_demo_planner.py  test_demo_produce_cli.py  test_demo_record_cli.py  test_demo_recording.py  test_demo_runner.py  test_demo_script.py  test_detectors.py  test_detectors_authenticated.py  test_editor.py  test_editor_server.py  test_ffmpeg_capabilities.py  test_framing.py  test_handoff.py  test_hermes_project.py  test_local_transport.py  test_page_discovery.py  test_planner.py  test_polish.py  test_polish_ffmpeg_integration.py  test_powershell_e2e.py  test_preview.py  test_produce.py  test_raw_chrome.py  test_raw_chrome_contract.py  test_recording.py  test_recording_events.py  (+6 more)
tools/: run_demo_script_smoke.py
(+30 files in other folders)
